--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/sampa_dev_db
+    url: jdbc:postgresql://db:5432/sampa_dev_db
     username: sampa_dev
     password: 1234
     driver-class-name: org.postgresql.Driver
